chor fix project path

--- a/.github/workflows/publish-to-nuget.yml
+++ b/.github/workflows/publish-to-nuget.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Publish TabTabGo.Core.Infrastructure to NuGet
         uses: tabtabgo/publish-to-nuget-action@v1.7
         with:
-          project_path: 'src/TabTabGo.Core.Infrastructure/TabTabGo.Core.Infrastructure.csproj'
+          project_path: 'src/core/TabTabGo.Core.Infrastructure/TabTabGo.Core.Infrastructure.csproj'
           package_version: ${GITHUB_REF#refs/*/v}
           package_name: 'TabTabGo.Core.Infrastructure'
           nuget_api_key: ${{ secrets.NUGET_API_KEY }}
