--- a/src/core/TabTabGo.Core.Infrastructure/TabTabGo.Core.Infrastructure.csproj
+++ b/src/core/TabTabGo.Core.Infrastructure/TabTabGo.Core.Infrastructure.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageVersion>$(VersionSuffix)</PackageVersion>
@@ -10,7 +10,7 @@
     <Copyright>TabTabGo</Copyright>
     <PackageIcon>logo@32.png</PackageIcon>
     <RepositoryUrl>https://github.com/TabTabGo/TabTabGo.Core</RepositoryUrl>
-    <LangVersion>10</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
