--- a/src/data/TabTabGo.Data.EF/TabTabGo.Data.EF.csproj
+++ b/src/data/TabTabGo.Data.EF/TabTabGo.Data.EF.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageVersion>6.0.0</PackageVersion>
@@ -12,6 +12,7 @@
         <PackageProjectUrl>https://github.com/TabTabGo/TabTabGo.Core</PackageProjectUrl>
         <PackageVersion>$(VersionSuffix)</PackageVersion>
         <PackageIcon>logo@32.png</PackageIcon>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -19,9 +20,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="LinqKit" Version="1.2.2" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.8" />
+      <PackageReference Include="LinqKit" Version="1.2.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
