--- a/src/core/TabTabGo.Core.Services/TabTabGo.Core.Services.csproj
+++ b/src/core/TabTabGo.Core.Services/TabTabGo.Core.Services.csproj
@@ -12,6 +12,7 @@
     <PackageTags>Services Core</PackageTags>
     <PackageVersion>$(VersionSuffix)</PackageVersion>
     <LangVersion>latest</LangVersion>
+    <Version>8.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
