--- a/src/core/TabTabGo.Core.Infrastructure/TabTabGo.Core.Infrastructure.csproj
+++ b/src/core/TabTabGo.Core.Infrastructure/TabTabGo.Core.Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageIcon>logo@32.png</PackageIcon>
     <RepositoryUrl>https://github.com/TabTabGo/TabTabGo.Core</RepositoryUrl>
     <LangVersion>latest</LangVersion>
+    <Version>8.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
