--- a/src/data/TabTabGo.Data.EF/TabTabGo.Data.EF.csproj
+++ b/src/data/TabTabGo.Data.EF/TabTabGo.Data.EF.csproj
@@ -13,6 +13,7 @@
         <PackageVersion>$(VersionSuffix)</PackageVersion>
         <PackageIcon>logo@32.png</PackageIcon>
         <LangVersion>latest</LangVersion>
+        <Version>8.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
