chor: pack the icon

--- a/src/data/TabTabGo.Data.EF/TabTabGo.Data.EF.csproj
+++ b/src/data/TabTabGo.Data.EF/TabTabGo.Data.EF.csproj
@@ -28,7 +28,9 @@
 
     <ItemGroup>
       <Content Include="..\..\..\assets\logo@32.png">
-        <Link>logo@32.png</Link>
+          <Pack>True</Pack>
+          <PackagePath></PackagePath>
+          <Link>logo@32.png</Link>
       </Content>
     </ItemGroup>
 
