fix: rename country phone_extension to phone_code in json file

--- a/TabTabGo.Core.Country/TabTabGo.Core.Country.csproj
+++ b/TabTabGo.Core.Country/TabTabGo.Core.Country.csproj
@@ -5,17 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Data\countries_info.json" />
-    <None Remove="Resources\ar-AE.json" />
-  </ItemGroup>
-
+  
   <ItemGroup>
     <Content Include="Data\countries_info.json">
+      <Pack>true</Pack>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\ar-AE.json">
+      <Pack>true</Pack>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -24,12 +21,6 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Resources\en-US.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
