--- a/test/TabTabGo.Core.Test/TabTabGo.Core.Test.csproj
+++ b/test/TabTabGo.Core.Test/TabTabGo.Core.Test.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\core\TabTabGo.Core.Country\TabTabGo.Core.Country.csproj" />
     <ProjectReference Include="..\..\TabTabGo.Core.Country\TabTabGo.Core.Country.csproj" />
   </ItemGroup>
 
