fix: add missing HandleJsonOperator

--- a/test/TabTabGo.Core.Test/TabTabGo.Core.Test.csproj
+++ b/test/TabTabGo.Core.Test/TabTabGo.Core.Test.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\core\TabTabGo.Core.Country\TabTabGo.Core.Country.csproj" />
-    <ProjectReference Include="..\..\TabTabGo.Core.Country\TabTabGo.Core.Country.csproj" />
+    <ProjectReference Include="..\..\src\core\TabTabGo.Core.Services\TabTabGo.Core.Services.csproj" />
   </ItemGroup>
 
 </Project>
